--- a/sigverse/plugin/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010.vcxproj
+++ b/sigverse/plugin/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010.vcxproj
@@ -63,31 +63,37 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(BOOST_1_55_0_LIB_DIR);$(OCULUS_SDK_LIB_DIR)\Include;$(SIGSERVICE_100_LIB_DIR)\SIGService;$(SIGVERSE_BUILD_PATH);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK_0.2.5\LibOVR\Include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(BOOST_1_55_0_LIB_DIR)\lib32-msvc-10.0;$(OCULUS_SDK_LIB_DIR)\Lib\Win32;$(SIGSERVICE_100_LIB_DIR)\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OculusSDK_0.2.5\LibOVR\Lib\Win32;C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libovr.lib;winmm.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy ".\OculusRiftDK1.ini" "..\Release"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\common\device\OculusRiftDK1SensorData.cpp" />
-    <ClCompile Include="..\..\..\common\device\SensorData.cpp" />
+    <ClCompile Include="..\..\..\devicecommon\device\OculusRiftDK1SensorData.cpp" />
+    <ClCompile Include="..\..\..\devicecommon\device\SensorData.cpp" />
     <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp" />
     <ClCompile Include="..\..\common\Device.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OculusRiftDK1Device.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\common\device\DeviceCommon.h" />
-    <ClInclude Include="..\..\..\common\device\OculusRiftDK1SensorData.h" />
-    <ClInclude Include="..\..\..\common\device\SensorData.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\DeviceCommon.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\OculusRiftDK1SensorData.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\SensorData.h" />
     <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h" />
     <ClInclude Include="..\..\common\Device.h" />
     <ClInclude Include="OculusRiftDK1Device.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OculusRiftDK1.ini" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
