--- a/sigverse/plugin/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj
+++ b/sigverse/plugin/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj
@@ -64,30 +64,36 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\SIGVerse\src\boost_1_55_0;C:\SIGVerse\GitHub\Client\SIGService\Windows\SIGService;C:\SIGVerse\src\OculusSDK_DK2\LibOVR\Include;C:\SIGVerse\src\OculusSDK_DK2\LibOVR\Src;C:\SIGVerse\GitHub\EmbodiedBrain\MirrorTherapy_v2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\SIGVerse\src\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\src\OculusSDK_DK2\LibOVR\Lib\Win32\VS2010;C:\SIGVerse\GitHub\Client\SIGService\Windows\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Lib\Win32\VS2010;C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>ws2_32.lib;libovr.lib;winmm.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy ".\OculusRiftDK2.ini" "..\Release"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\common\device\OculusRiftDK2SensorData.cpp" />
-    <ClCompile Include="..\..\..\common\device\SensorData.cpp" />
+    <ClCompile Include="..\..\..\devicecommon\device\OculusRiftDK2SensorData.cpp" />
+    <ClCompile Include="..\..\..\devicecommon\device\SensorData.cpp" />
     <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp" />
     <ClCompile Include="..\..\common\Device.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OculusRiftDK2Device.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\common\device\OculusRiftDK2SensorData.h" />
-    <ClInclude Include="..\..\..\common\device\SensorData.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\OculusRiftDK2SensorData.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\SensorData.h" />
     <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h" />
     <ClInclude Include="..\..\common\Device.h" />
     <ClInclude Include="OculusRiftDK2Device.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OculusRiftDK2.ini" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
