--- a/sigverse/plugin/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj.filters
+++ b/sigverse/plugin/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj.filters
@@ -18,13 +18,13 @@
     <ClCompile Include="Main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\common\device\OculusRiftDK2SensorData.cpp">
+    <ClCompile Include="..\..\..\devicecommon\device\OculusRiftDK2SensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="OculusRiftDK2Device.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\common\device\SensorData.cpp">
+    <ClCompile Include="..\..\..\devicecommon\device\SensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp">
@@ -38,10 +38,10 @@
     <ClInclude Include="OculusRiftDK2Device.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\common\device\OculusRiftDK2SensorData.h">
+    <ClInclude Include="..\..\..\devicecommon\device\OculusRiftDK2SensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\common\device\SensorData.h">
+    <ClInclude Include="..\..\..\devicecommon\device\SensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h">
@@ -50,5 +50,8 @@
     <ClInclude Include="..\..\common\Device.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OculusRiftDK2.ini" />
   </ItemGroup>
 </Project>
