--- a/sigverse/plugin/OptiTrack_vs2010/OptiTrack_vs2010/OptiTrack_vs2010.vcxproj
+++ b/sigverse/plugin/OptiTrack_vs2010/OptiTrack_vs2010/OptiTrack_vs2010.vcxproj
@@ -63,31 +63,37 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(SIGSERVICE_100_LIB_DIR)\SIGService;$(BOOST_1_55_0_LIB_DIR);$(SIGVERSE_BUILD_PATH);$(NATNET_SDK_LIB_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\NatNet_SDK_2.7\NatNetSDK\include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(NATNET_SDK_LIB_DIR)\lib;$(SIGSERVICE_100_LIB_DIR)\Release_2010;$(BOOST_1_55_0_LIB_DIR)\lib32-msvc-10.0;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\NatNet_SDK_2.7\NatNetSDK\lib;C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>ws2_32.lib;NatNetLibStatic.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy ".\OptiTrack.ini" "..\Release"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\common\device\OptiTrackSensorData.cpp" />
-    <ClCompile Include="..\..\..\common\device\SensorData.cpp" />
+    <ClCompile Include="..\..\..\devicecommon\device\OptiTrackSensorData.cpp" />
+    <ClCompile Include="..\..\..\devicecommon\device\SensorData.cpp" />
     <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp" />
     <ClCompile Include="..\..\common\Device.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OptiTrackDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\common\device\DeviceCommon.h" />
-    <ClInclude Include="..\..\..\common\device\OptiTrackSensorData.h" />
-    <ClInclude Include="..\..\..\common\device\SensorData.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\DeviceCommon.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\OptiTrackSensorData.h" />
+    <ClInclude Include="..\..\..\devicecommon\device\SensorData.h" />
     <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h" />
     <ClInclude Include="..\..\common\Device.h" />
     <ClInclude Include="OptiTrackDevice.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OptiTrack.ini" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
