--- a/sample_controllers/ManNiiAvatarControllerByKinectV2/Makefile
+++ b/sample_controllers/ManNiiAvatarControllerByKinectV2/Makefile
@@ -3,15 +3,15 @@ TARGET = ./ManNiiAvatarControllerByKinectV2.so
 
 # sources
 SRCS =\
-	../../sigverse/plugin/common/SigCmn.cpp \
-	../../sigverse/plugin/common/Quaternion.cpp \
-	../../sigverse/plugin/common/sensor/SensorData.cpp \
-	../../sigverse/plugin/common/sensor/KinectV2SensorData.cpp \
-	../../sigverse/plugin/controller/common/Posture.cpp \
-	../../sigverse/plugin/controller/common/ManNiiPosture.cpp \
-	../../sigverse/plugin/controller/common/AvatarController.cpp \
-	../../sigverse/plugin/controller/common/ManNiiAvatarController.cpp \
-	../../sigverse/plugin/controller/common/sensor/KinectV2DeviceManager.cpp \
+	../../srcs/sigverse/plugin/common/SigCmn.cpp \
+	../../srcs/sigverse/plugin/common/Quaternion.cpp \
+	../../srcs/sigverse/plugin/common/sensor/SensorData.cpp \
+	../../srcs/sigverse/plugin/common/sensor/KinectV2SensorData.cpp \
+	../../srcs/sigverse/plugin/controller/common/Posture.cpp \
+	../../srcs/sigverse/plugin/controller/common/ManNiiPosture.cpp \
+	../../srcs/sigverse/plugin/controller/common/AvatarController.cpp \
+	../../srcs/sigverse/plugin/controller/common/ManNiiAvatarController.cpp \
+	../../srcs/sigverse/plugin/controller/common/sensor/KinectV2DeviceManager.cpp \
 	ManNiiAvatarControllerByKinectV2.cpp \
 
 # sigverse path
@@ -21,7 +21,7 @@ SIG_SRC = $(SIGVERSE_PATH)/include
 CXX = g++
 
 # compile option
-CFLAGS = -std=c++11 -DCONTROLLER -DNDEBUG -DUSE_ODE -DdDOUBLE -I$(SIG_SRC) -I../../ -fPIC -shared
+CFLAGS = -std=c++11 -DCONTROLLER -DNDEBUG -DUSE_ODE -DdDOUBLE -I$(SIG_SRC) -I../../srcs/ -fPIC -shared
 
 # generate intermediate object file from sources.
 OBJS := $(SRCS:.cpp=.o)
