--- a/sample_controllers/ManNiiAvatarControllerByOculusDK2/Makefile
+++ b/sample_controllers/ManNiiAvatarControllerByOculusDK2/Makefile
@@ -2,32 +2,19 @@
 TARGET = ./ManNiiAvatarControllerByOculusDK2.so
 
 # sources
-SRCS =\
-	../../sigverse/plugin/common/SigCmn.cpp \
-	../../sigverse/plugin/common/Quaternion.cpp \
-	../../sigverse/plugin/common/sensor/SensorData.cpp \
-	../../sigverse/plugin/common/sensor/OculusRiftDK2SensorData.cpp \
-	../../sigverse/plugin/controller/common/Posture.cpp \
-	../../sigverse/plugin/controller/common/ManNiiPosture.cpp \
-	../../sigverse/plugin/controller/common/AvatarController.cpp \
-	../../sigverse/plugin/controller/common/ManNiiAvatarController.cpp \
-	../../sigverse/plugin/controller/common/sensor/OculusDK2DeviceManager.cpp \
-	ManNiiAvatarControllerByOculusDK2.cpp \
-
-# sigverse path
-SIG_SRC = $(SIGVERSE_PATH)/include
+SRCS = ManNiiAvatarControllerByOculusDK2.cpp \
 
 # compiler
 CXX = g++
 
 # compile option
-CFLAGS = -std=c++11 -DCONTROLLER -DNDEBUG -DUSE_ODE -DdDOUBLE -I$(SIG_SRC) -I../../ -fPIC -shared
+CFLAGS  = -std=c++11 -DCONTROLLER -DNDEBUG -DUSE_ODE -DdDOUBLE -I$(SIGVERSE_PATH)/include  -fPIC -shared 
+LDFLAGS = -Wl,-rpath=$(SIGVERSE_PATH)/lib -L$(SIGVERSE_PATH)/lib -lsigplugin
 
 # generate intermediate object file from sources.
 OBJS := $(SRCS:.cpp=.o)
 
 # -- compile rule --
-
 all: $(TARGET)
 
 # intermediate output file
@@ -35,8 +22,8 @@ all: $(TARGET)
 	$(CXX) $(CFLAGS) -o $@ -c $<
 
 # target file(.so)
-$(TARGET): $(OBJS) $(SRCS)
-	$(CXX) $(CFLAGS) -o $@ $(OBJS) # Link object files.
+$(TARGET): $(OBJS) 
+	$(CXX) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 	rm -f $(OBJS) # Remove intermediate files.
 
 # remove object file
