--- a/srcs/sigverse/plugin/plugin/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010.vcxproj
+++ b/srcs/sigverse/plugin/plugin/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010.vcxproj
@@ -63,7 +63,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK_0.2.5\LibOVR\Include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\..\;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK_0.2.5\LibOVR\Include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -77,17 +77,17 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\devicecommon\device\OculusRiftDK1SensorData.cpp" />
-    <ClCompile Include="..\..\..\devicecommon\device\SensorData.cpp" />
+    <ClCompile Include="..\..\..\common\sensor\OculusRiftDK1SensorData.cpp" />
+    <ClCompile Include="..\..\..\common\sensor\SensorData.cpp" />
     <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp" />
     <ClCompile Include="..\..\common\Device.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OculusRiftDK1Device.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\devicecommon\device\SensorCommon.h" />
-    <ClInclude Include="..\..\..\devicecommon\device\OculusRiftDK1SensorData.h" />
-    <ClInclude Include="..\..\..\devicecommon\device\SensorData.h" />
+    <ClInclude Include="..\..\..\common\sensor\SensorCommon.h" />
+    <ClInclude Include="..\..\..\common\sensor\OculusRiftDK1SensorData.h" />
+    <ClInclude Include="..\..\..\common\sensor\SensorData.h" />
     <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h" />
     <ClInclude Include="..\..\common\Device.h" />
     <ClInclude Include="OculusRiftDK1Device.h" />
