--- a/srcs/sigverse/plugin/plugin/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010.vcxproj.filters
+++ b/srcs/sigverse/plugin/plugin/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010/OculusRiftDK1_vs2010.vcxproj.filters
@@ -24,10 +24,10 @@
     <ClCompile Include="..\..\common\Device.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\devicecommon\device\OculusRiftDK1SensorData.cpp">
+    <ClCompile Include="..\..\..\common\sensor\OculusRiftDK1SensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\devicecommon\device\SensorData.cpp">
+    <ClCompile Include="..\..\..\common\sensor\SensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp">
@@ -41,16 +41,16 @@
     <ClInclude Include="..\..\common\Device.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\devicecommon\device\OculusRiftDK1SensorData.h">
+    <ClInclude Include="..\..\..\common\sensor\OculusRiftDK1SensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\devicecommon\device\SensorData.h">
+    <ClInclude Include="..\..\..\common\sensor\SensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\devicecommon\device\SensorCommon.h">
+    <ClInclude Include="..\..\..\common\sensor\SensorCommon.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
