--- a/srcs/sigverse/plugin/plugin/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj.filters
+++ b/srcs/sigverse/plugin/plugin/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj.filters
@@ -18,13 +18,13 @@
     <ClCompile Include="Main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\devicecommon\device\OculusRiftDK2SensorData.cpp">
+    <ClCompile Include="..\..\..\common\sensor\OculusRiftDK2SensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="OculusRiftDK2Device.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\devicecommon\device\SensorData.cpp">
+    <ClCompile Include="..\..\..\common\sensor\SensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp">
@@ -38,10 +38,10 @@
     <ClInclude Include="OculusRiftDK2Device.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\devicecommon\device\OculusRiftDK2SensorData.h">
+    <ClInclude Include="..\..\..\common\sensor\OculusRiftDK2SensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\devicecommon\device\SensorData.h">
+    <ClInclude Include="..\..\..\common\sensor\SensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h">
