--- a/projects/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj
+++ b/projects/OculusRiftDK2_vs2010/OculusRiftDK2_vs2010.vcxproj
@@ -11,22 +11,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9931B4E2-F6EC-4A2D-BEC2-4022A2D281B5}</ProjectGuid>
-    <RootNamespace>OculusRiftDK1_vs2010</RootNamespace>
+    <ProjectGuid>{4D78DABD-91D8-41B7-9248-62E1AC125939}</ProjectGuid>
+    <RootNamespace>OculusRiftSensorDK2</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
+    <PlatformToolset>v100</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
+    <PlatformToolset>v100</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -48,13 +48,13 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\SIGVerse\src\boost_1_55_0;C:\SIGVerse\src\OculusSDK\LibOVR\Include;C:\SIGVerse\GitHub\Client\SIGService\Windows\SIGService;C:\SIGVerse\src\EmbodiedBrain\MirrorTherapy_v2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
+      <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\GitHub\Client\SIGService\Windows\SIGService;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Include;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\SIGVerse\src\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\src\OculusSDK\LibOVR\Lib\Win32;C:\SIGVerse\GitHub\Client\SIGService\Windows\Debug_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libovrd.lib;winmm.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Lib\Win32\VS2010;C:\SIGVerse\GitHub\Client\SIGService\Windows\Debug_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ws2_32.lib;libovr.lib;winmm.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -63,37 +63,37 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\..\;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK_0.2.5\LibOVR\Include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\srcs;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OculusSDK_0.2.5\LibOVR\Lib\Win32;C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libovr.lib;winmm.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Lib\Win32\VS2010;C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ws2_32.lib;libovr.lib;winmm.lib;SIGService.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy ".\OculusRiftDK1.ini" "..\Release"</Command>
+      <Command>copy ".\OculusRiftDK2.ini" "..\Release"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\common\sensor\OculusRiftDK1SensorData.cpp" />
-    <ClCompile Include="..\..\..\common\sensor\SensorData.cpp" />
-    <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp" />
-    <ClCompile Include="..\..\common\Device.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="OculusRiftDK1Device.cpp" />
+    <ClCompile Include="..\..\srcs\sigverse\plugin\common\sensor\OculusRiftDK2SensorData.cpp" />
+    <ClCompile Include="..\..\srcs\sigverse\plugin\common\sensor\SensorData.cpp" />
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\common\CheckRecvSIGServiceData.cpp" />
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\common\Device.cpp" />
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\OculusRiftDK2\Main.cpp" />
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\OculusRiftDK2\OculusRiftDK2Device.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\common\sensor\SensorCommon.h" />
-    <ClInclude Include="..\..\..\common\sensor\OculusRiftDK1SensorData.h" />
-    <ClInclude Include="..\..\..\common\sensor\SensorData.h" />
-    <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h" />
-    <ClInclude Include="..\..\common\Device.h" />
-    <ClInclude Include="OculusRiftDK1Device.h" />
+    <ClInclude Include="..\..\srcs\sigverse\plugin\common\sensor\OculusRiftDK2SensorData.h" />
+    <ClInclude Include="..\..\srcs\sigverse\plugin\common\sensor\SensorData.h" />
+    <ClInclude Include="..\..\srcs\sigverse\plugin\plugin\common\CheckRecvSIGServiceData.h" />
+    <ClInclude Include="..\..\srcs\sigverse\plugin\plugin\common\Device.h" />
+    <ClInclude Include="..\..\srcs\sigverse\plugin\plugin\OculusRiftDK2\OculusRiftDK2Device.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="OculusRiftDK1.ini" />
+    <None Include="OculusRiftDK2.ini" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
