--- a/projects/OptiTrack_vs2010/OptiTrack_vs2010.vcxproj.filters
+++ b/projects/OptiTrack_vs2010/OptiTrack_vs2010.vcxproj.filters
@@ -15,46 +15,46 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\OptiTrack\Main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="OculusRiftDK1Device.cpp">
+    <ClCompile Include="..\..\srcs\sigverse\plugin\common\sensor\SensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\common\Device.cpp">
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\common\Device.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\common\sensor\OculusRiftDK1SensorData.cpp">
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\OptiTrack\OptiTrackDevice.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\common\sensor\SensorData.cpp">
+    <ClCompile Include="..\..\srcs\sigverse\plugin\common\sensor\OptiTrackSensorData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\common\CheckRecvSIGServiceData.cpp">
+    <ClCompile Include="..\..\srcs\sigverse\plugin\plugin\common\CheckRecvSIGServiceData.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="OculusRiftDK1Device.h">
+    <ClInclude Include="..\..\srcs\sigverse\plugin\common\sensor\SensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\Device.h">
+    <ClInclude Include="..\..\srcs\sigverse\plugin\common\Device.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\common\sensor\OculusRiftDK1SensorData.h">
+    <ClInclude Include="..\..\srcs\sigverse\plugin\plugin\OptiTrack\OptiTrackDevice.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\common\sensor\SensorData.h">
+    <ClInclude Include="..\..\srcs\sigverse\plugin\common\sensor\OptiTrackSensorData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\CheckRecvSIGServiceData.h">
+    <ClInclude Include="..\..\srcs\sigverse\plugin\plugin\common\CheckRecvSIGServiceData.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\common\sensor\SensorCommon.h">
+    <ClInclude Include="..\..\srcs\sigverse\plugin\common\sensor\plugin\SensorCommon.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="OculusRiftDK1.ini" />
+    <None Include="OptiTrack.ini" />
   </ItemGroup>
 </Project>
