--- a/projects/PerceptionNeuron_vs2013/PerceptionNeuron.ini
+++ b/projects/PerceptionNeuron_vs2013/PerceptionNeuron.ini
@@ -4,6 +4,6 @@ device_type      = PERCEPTION_NEURON
 device_unique_id = 0
 
 [PerceptionNeuron]
-# Nothing now.
+# Connection to Axis Neuron.
 ip_address = 127.0.0.1
 port       = 7001
