Modify Perception Neuron plugin.

--- a/projects/PerceptionNeuron_vs2013/PerceptionNeuron.ini
+++ b/projects/PerceptionNeuron_vs2013/PerceptionNeuron.ini
@@ -5,5 +5,9 @@ device_unique_id = 0
 
 [PerceptionNeuron]
 # Connection to Axis Neuron.
-ip_address = 127.0.0.1
-port       = 7001
+# data_type : BVH or CALC
+data_type = BVH
+bvh_ip_address  = 127.0.0.1
+bvh_port        = 7001
+calc_ip_address = 127.0.0.1
+calc_port       = 7012
